--- a/gb/22/11/21/n13870463.md
+++ b/gb/22/11/21/n13870463.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多名法轮功学员在非法拘押期被迫害致死</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/001-20170720-_96A2165-MARK-ZOU1-1-600x400.jpg" />
 <h6>2017年7月20日晚，美东部分法轮功学员在首都华盛顿林肯纪念堂前举行烛光夜悼。（Mark Zou／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年11月22日讯】（大纪元记者李辰采访报导）11月8日，辽宁大连市<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%98%E7%BA%A2%E9%9C%9E.md#1">刘红霞</a>被迫害致死。时年47岁。</p>
-<p>9月15日，四川成都<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员、优秀作家<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%A6%E6%98%8E.md#1">王学明</a>被送入呼和浩特第一监狱；9月21日，狱方称，王学明在监狱“猝死”。王时年52岁。</p>
-<p>8月12日，河北保定市雄县法轮功学员、原《法制日报》记者<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%A8%E6%99%BA%E9%9B%84.md#1">杨智雄</a>被迫害致死。时年58岁，死不瞑目。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%98%E7%BA%A2%E9%9C%9E.md#1">刘红霞</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%A6%E6%98%8E.md#1">王学明</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%A8%E6%99%BA%E9%9B%84.md#1">杨智雄</a>三人在被非法拘押期间被迫害致死。中共对法轮功的迫害持续23年至今。据明慧网今年10月统计，新增14位法轮功学员被迫害致死；9月统计，致死人数新增7人；8月统计，新增18人；7月统计，新增8人；1至6月统计，新增92人被迫害致死。其中，多人在中共监狱、看守所被非法关押期间凄惨离世。</p>
+	<p>【大纪元2022年11月22日讯】（大纪元记者李辰采访报导）11月8日，辽宁大连市法轮功学员刘红霞被迫害致死。时年47岁。</p>
+<p>9月15日，四川成都法轮功学员、优秀作家王学明被送入呼和浩特第一监狱；9月21日，狱方称，王学明在监狱“猝死”。王时年52岁。</p>
+<p>8月12日，河北保定市雄县法轮功学员、原《法制日报》记者杨智雄被迫害致死。时年58岁，死不瞑目。</p>
+<p>刘红霞、王学明、杨智雄三人在被非法拘押期间被迫害致死。中共对法轮功的迫害持续23年至今。据明慧网今年10月统计，新增14位法轮功学员被迫害致死；9月统计，致死人数新增7人；8月统计，新增18人；7月统计，新增8人；1至6月统计，新增92人被迫害致死。其中，多人在中共监狱、看守所被非法关押期间凄惨离世。</p>
 <p>就辽宁大连市法轮功学员刘红霞被迫害致死事件，美国华府共产主义受害者基金会首席执行官（CEO）肯?波普（Ken Pope）在接受大纪元采访时呼吁中共停止迫害宗教信仰少数群体，他表示，中共的迫害反映了共产主义的恐怖本质。</p>
 <h2>刘红霞病危 家属申请保外就医被拒</h2>
 <p>刘红霞，女，辽宁省大连市法轮功学员，毕业于大连外国语学院俄语专业。</p>
@@ -22,13 +22,13 @@
 <p>医院反馈说，11月4日下午，刘红霞鼻孔和嘴角流血，医院认为她的生命没有几天了，让家人带孩子去跟她见见面。见面时，一个警察在场，手上拿着执法记录仪。</p>
 <p>刘红霞于11月8日早晨在新华医院含冤离世。</p>
 <h2>王学明被劫持至呼和浩特第一监狱 六天后“猝死”</h2>
-<figure style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://www.minghui.org/mh/article_images/2022-10-19-mh-wangxueming.jpg"><img class="size-large" src="https://www.minghui.org/mh/article_images/2022-10-19-mh-wangxueming.jpg" width="200" b="300" /></a><figcaption class="wp-caption-text">王学明（明慧网）</figcaption></figure>
+<figure style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://www.minghui.org/mh/article_images/2022-10-19-mh-wangxueming.jpg"><img decoding="async" class="size-large" src="https://www.minghui.org/mh/article_images/2022-10-19-mh-wangxueming.jpg" width="200" b="300" /></a><figcaption class="wp-caption-text">王学明（明慧网）</figcaption></figure>
 <p>王学明，男，四川省法轮功学员，四川师大汉语言文学专业学士、西南师大教育硕士，出版专著十多部，并荣获“2007年搜狐网十大优秀作家”称号。</p>
 <p>2020年11月20日，王在内蒙古包头市讲学时，遭到包头市青山区公安分局绑架、构陷、枉判四年。</p>
 <p>2022年9月15日，王被劫持至呼和浩特第一监狱。9月21日，家属收到通知，称王学明在监狱“猝死”。</p>
 <p>家属说，王学明因修炼法轮功，身体一向很好，不可能“猝死”。被非法逮捕时，王的身体非常健康。</p>
 <h2>杨智雄被冀东监狱迫害致死</h2>
-<figure style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://www.minghui.org/mh/article_images/2012-12-15-minghui-hebei-xiongxian-yangzhixiong.jpg"><img class="size-large" src="https://www.minghui.org/mh/article_images/2012-12-15-minghui-hebei-xiongxian-yangzhixiong.jpg" width="200" b="300" /></a><figcaption class="wp-caption-text">杨智雄（明慧网）</figcaption></figure>
+<figure style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://www.minghui.org/mh/article_images/2012-12-15-minghui-hebei-xiongxian-yangzhixiong.jpg"><img decoding="async" class="size-large" src="https://www.minghui.org/mh/article_images/2012-12-15-minghui-hebei-xiongxian-yangzhixiong.jpg" width="200" b="300" /></a><figcaption class="wp-caption-text">杨智雄（明慧网）</figcaption></figure>
 <p>杨智雄，男，河北省法轮功学员，曾进修于河北经贸大学，曾在河北《法制日报》做记者，后经商，曾在北京某外企公司任办公室主任。</p>
 <p>2019年9月26日，杨智雄在容城高速检查站被容城县公安局非法拘留，2020年12月被非法判刑6年，后被关押在冀东监狱。</p>
 <p>之后的一年多时间里，监狱以疫情为由不让他给其家人打电话，也不让家人见他。今年5月、6月，监狱给他家人打了两次电话，一次是索要杨智雄的生活费500元，一次是索要给杨智雄治疗腰椎间盘突出的费用3,000元。</p>
@@ -48,45 +48,35 @@
 <p>（文中迫害案例来自明慧网）</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/6/n9931829.md#1">2017年被中共迫害致死的61位法轮功学员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/31/n10102177.md#1">被中共迫害致死的北大法轮功学员于宙（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/21/n11399289.md#1">明慧20周年报告：迫害致死致残致精神失常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/20/n13828898.md#1">铁窗下坚守信仰 这些人被中共迫害致死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/6/n9931829.md#1">2017年被中共迫害致死的61位法轮功学员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10102177.md#1">被中共迫害致死的北大法轮功学员于宙（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11399289.md#1">明慧20周年报告：迫害致死致残致精神失常</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/20/n13828898.md#1">铁窗下坚守信仰 这些人被中共迫害致死</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/5/n10538029.md#1" target="_blank">王友琴：文革中的王冷之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/10/n14013654.md#1">美国民众目击外星生物报警：100%不是人类</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14012849.md#1">【未解之谜】灵界网络的浏览器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009632.md#1">伟大的禁书：《安妮日记》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011498.md#1">人生是戏 剧本天定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005832.md#1">万物有灵：大善人郭士俊降龙伏虎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015399.md#1">【军事热点】乌军用沉默回应俄军的“胜利”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014605.md#1">【未解之谜】太阳系的行星保卫者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14015882.md#1">【晚间新闻】天津两小区发生爆炸 多人伤亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014552.md#1">饶毅曝中共科学界买卖院士头衔黑幕 原文被删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014485.md#1">中国地方频以罚款创收 专家：这是绝望之举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014255.md#1">家长被要求签不信教承诺 律师：这是中共洗脑术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014848.md#1">港星陈子聪严重内出血 下半身瘫痪已逾2个月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014245.md#1">在上海活动现场合照 周润发请陈凯歌调位获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014482.md#1">阿诺曾为一电影感到难堪 一周都不想见人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014218.md#1">胡歌自曝心理困境：一直没勇气面对母亲去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015083.md#1">叶家妤办派对揭第3胎性别 谢谢众人的祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008101.md#1">燕麦餐强力降血糖 挽救糖尿病重患 但有1大缺点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011054.md#1">完全戒盐有3大不良影响 高血压每天应吃多少盐？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014543.md#1">世界最快乐国家的心理学家 阐述生活的意义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014663.md#1">14种有趣技巧 帮你找到下厨乐趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014391.md#1">只要1%首付款就买房 想要吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284224.md#1">《韩信》，我竟然看上了瘾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289092.md#1">【新闻大家谈】王维洛：洞庭湖决堤的前因后果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289733.md#1">【菁英论坛】全民躺平反共 熬出新中国？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288249.md#1">市场疲软 传李嘉诚旗下东莞楼盘五折出售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288521.md#1">大陆失业者比比皆是 80后博主大街上痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287995.md#1">成龙《传说》成本3.6亿 9小时票房仅61万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287290.md#1">TWICE子瑜今夏想挑战潜水 目标深度引来笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14288095.md#1">被问《长相思2》片酬谁最高 杨紫回答超搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287053.md#1">《比佛利山超级警探4》登台美及全球Netflix榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288317.md#1">吃水蜜桃如何快速去果核？ 试试这个妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274458.md#1">锻炼“天然护膝”让行动自如</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288470.md#1">哈佛研究：感恩让年长者活得更久</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280514.md#1">心律失常 手脚麻木 记得检查钾含量！</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/21/n13870463.htm">多名法轮功学员在非法拘押期被迫害致死</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/21/n13870463.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/11/21/n13870463.htm">多名法轮功学员在非法拘押期被迫害致死</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/21/n13870463.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
